added greenwood and hanson 2013 CMS

--- a/nbs/01_wrds/01_crspm.ipynb
+++ b/nbs/01_wrds/01_crspm.ipynb
@@ -471,7 +471,7 @@
     "    \"\"\"Applies `pandasmore.setup_panel` to `df`\"\"\"\n",
     "\n",
     "    # Change some variables to categorical\n",
-    "    for col in ['permno','permco','shrcd','exchcd']:\n",
+    "    for col in ['shrcd','exchcd']:\n",
     "        if col in df.columns:\n",
     "            df[col] = df[col].astype('Int64').astype('category')\n",
     "\n",
