--- a/nbs/01_wrds/03_compa_ccm.ipynb
+++ b/nbs/01_wrds/03_compa_ccm.ipynb
@@ -519,10 +519,6 @@
     "    if linkprim_filter: df = df.loc[df['linkprim'].isin(linkprim_filter)].copy()\n",
     "\n",
     "    # Change some variables to categorical\n",
-    "    for col in ['permno','permco']:\n",
-    "        if col in df.columns:\n",
-    "            df[col] = df[col].astype('Int64').astype('category')\n",
-    "\n",
     "    for col in ['gvkey','naics','sic','fic','cik','tic','cusip']:\n",
     "        if col in df.columns:\n",
     "            df[col] = df[col].astype('string').astype('category')\n",
@@ -673,9 +669,9 @@
     "    out['pref_stock'] = np.where(df['pstkrv'].isnull(), df['pstkl'], df['pstkrv'])\n",
     "    out['pref_stock'] = np.where(out['pref_stock'].isnull(),out['pstk0'], out['pref_stock'])\n",
     "    out['shreq'] = np.where(df['seq'].isnull(), df['ceq'] + out['pstk0'], df['seq'])\n",
-    "    out['shreq'] = np.where(out['shreq'].isnull(), df['at'] - df['lt'], out['shreq'])\n",
-    "    out['bookeq'] = out['shreq'] + df['txditc'].fillna(0) - out['pref_stock']\n",
-    "    out['bookeq_w_itcb'] = out['bookeq'] + df['itcb'].fillna(0)\n",
+    "    out['shreq'] = np.where(out['shreq'].isnull(), df['at'] - df['lt'] - df['mib'].fillna(0), out['shreq'])\n",
+    "    out['bookeq'] = out['shreq'] + df['txditc'].fillna(0) + df['itcb'].fillna(0) - out['pref_stock']\n",
+    "    #out['bookeq_w_itcb'] = out['bookeq'] + df['itcb'].fillna(0)\n",
     "\n",
     "    out['tobinq'] = (df['at'] - out['bookeq'] + out['mktcap']) / df['at']\n",
     "\n",
