--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -772,9 +772,9 @@
     "    out['pref_stock'] = np.where(df['pstkrv'].isnull(), df['pstkl'], df['pstkrv'])\n",
     "    out['pref_stock'] = np.where(out['pref_stock'].isnull(),out['pstk0'], out['pref_stock'])\n",
     "    out['shreq'] = np.where(df['seq'].isnull(), df['ceq'] + out['pstk0'], df['seq'])\n",
-    "    out['shreq'] = np.where(out['shreq'].isnull(), df['at'] - df['lt'], out['shreq'])\n",
-    "    out['bookeq'] = out['shreq'] + df['txditc'].fillna(0) - out['pref_stock']\n",
-    "    out['bookeq_w_itcb'] = out['bookeq'] + df['itcb'].fillna(0)\n",
+    "    out['shreq'] = np.where(out['shreq'].isnull(), df['at'] - df['lt'] - df['mib'].fillna(0), out['shreq'])\n",
+    "    out['bookeq'] = out['shreq'] + df['txditc'].fillna(0) + df['itcb'].fillna(0) - out['pref_stock']\n",
+    "    #out['bookeq_w_itcb'] = out['bookeq'] + df['itcb'].fillna(0)\n",
     "\n",
     "    out['tobinq'] = (df['at'] - out['bookeq'] + out['stock_price'] * df['csho']) / df['at']\n",
     "\n",
