ignoring the globals involving a data repo path

--- a/nbs/02_papers/greenwood_hanson_2013.ipynb
+++ b/nbs/02_papers/greenwood_hanson_2013.ipynb
@@ -45,6 +45,7 @@
    "outputs": [],
    "source": [
     "#| exports\n",
+    "#| eval: false\n",
     "DATA_REPO = Path(os.getenv('DATA_REPO')) #path to folder with all needed datasets (don't need it if you will be downloading them)\n",
     "\n",
     "COMPA_PATH = DATA_REPO/'finsets/wrds/compa_ccm/processed.pkl.zip' #Compustat annual: 'dtdate','dltt','dlc'\n",
