small changes to greenwood_hanson and peters_taylor

--- a/nbs/02_papers/greenwood_hanson_2013.ipynb
+++ b/nbs/02_papers/greenwood_hanson_2013.ipynb
@@ -46,15 +46,14 @@
    "source": [
     "#| exports\n",
     "#| eval: false\n",
-    "DATA_REPO = Path(os.getenv('DATA_REPO')) #path to folder with all needed datasets (don't need it if you will be downloading them)\n",
+    "DATA_REPO = Path(os.getenv('DATA_REPO')) #path to folder with all needed datasets (the four below)\n",
     "\n",
-    "COMPA_PATH = DATA_REPO/'finsets/wrds/compa_ccm/processed.pkl.zip' #Compustat annual: 'dtdate','dltt','dlc'\n",
-    "COMPFT_PATH = DATA_REPO/'finsets/wrds/compa_ccm/features.pkl.zip' #Compustat annual: 'debtiss_tot_2la'\n",
-    "CRSPM_PATH = DATA_REPO/'finsets/wrds/crspm/processed.pkl.zip'  #Crsp monthly: 'prc','shrout','exchcd', 'siccd'\n",
-    "CRSPFT_PATH = DATA_REPO/'finsets/wrds/crspm/features.pkl.zip'  #CRSP monthly features: 'retvol12', 'lbhret12'\n",
+    "COMPA_PATH = DATA_REPO/'finsets/wrds/compa_ccm/processed.pkl.zip' #created with finsets.wrds.compa_ccm.process_raw_data()\n",
+    "COMPFT_PATH = DATA_REPO/'finsets/wrds/compa_ccm/features.pkl.zip' #created with finsets.wrds.compa_ccm.features()\n",
+    "CRSPM_PATH = DATA_REPO/'finsets/wrds/crspm/processed.pkl.zip'  #created with finsets.wrds.crspm.process_raw_data()\n",
+    "CRSPFT_PATH = DATA_REPO/'finsets/wrds/crspm/features.pkl.zip'  #created with finsets.wrds.crspm.process_raw_data()\n",
     "\n",
-    "\n",
-    "OUTPUT_PATH = DATA_REPO/'finsets/papers/greenwood_hanson/features.pkl.zip'\n",
+    "OUTPUT_PATH = DATA_REPO/'finsets/papers/greenwood_hanson_2016/features.pkl.zip'\n",
     "\n",
     "FREQ = 'A'\n",
     "START_DATE = 1962\n",
@@ -551,7 +550,10 @@
     "                                                            quantiles=[x/10 for x in range(1,10)])\n",
     "    means = df.reset_index().groupby(['Adate', 'issuance_quintile'])['edf_decile'].mean().reset_index().set_index('Adate')\n",
     "    means = means.pivot(columns='issuance_quintile', values='edf_decile')\n",
-    "    cms = means[5] - means[1]\n",
+    "    cms = (means[5] - means[1]).to_frame(name='CMS')\n",
+    "\n",
+    "    os.makedirs(OUTPUT_PATH.parent, exist_ok=True)\n",
+    "    cms.to_pickle(OUTPUT_PATH)\n",
     "    return cms"
    ]
   },
