--- a/nbs/02_papers/peters_taylor_2016.ipynb
+++ b/nbs/02_papers/peters_taylor_2016.ipynb
@@ -496,13 +496,19 @@
     "\n",
     "    out = df.sort_index().copy()\n",
     "\n",
-    "    for x in ['xrd','xsga']:\n",
-    "        out[f'{x}0'] = np.where(out[x].isnull() & out['at'].notnull(), 0, out[x])\n",
-    "        out[f'{x}0'] = np.where(out[f'{x}0'].isnull() & out['at'].isnull(), out[f'{x}0'].interpolate(), out[f'{x}0'])\n",
+    "    for x in ['xrd','xsga','rdip']: out[f'{x}0'] = out[x].fillna(0)\n",
     "\n",
-    "    out['sga'] = np.where(out['xsga'].isnull() | out['xrd0'].between(out['xsga0'],out['cogs']) \n",
-    "                        ,out['xsga0'].fillna(0),\n",
-    "                        out['xsga0'] - out['xrd0'] - out['rdip'].fillna(0))    \n",
+    "    out['sga'] = np.where(out['xrd0'].between(out['xsga0'],out['cogs']) \n",
+    "                        ,out['xsga0'],\n",
+    "                        out['xsga0'] - out['xrd0'] - out['rdip0'])\n",
+    "    if False:\n",
+    "        for x in ['xrd','xsga']:\n",
+    "            out[f'{x}0'] = np.where(out[x].isnull() & out['at'].notnull(), 0, out[x])\n",
+    "            out[f'{x}0'] = np.where(out[f'{x}0'].isnull() & out['at'].isnull(), out[f'{x}0'].interpolate(), out[f'{x}0'])\n",
+    "\n",
+    "        out['sga'] = np.where(out['xsga'].isnull() | out['xrd0'].between(out['xsga0'],out['cogs']) \n",
+    "                            ,out['xsga0'].fillna(0),\n",
+    "                            out['xsga0'] - out['xrd0'] - out['rdip'].fillna(0))    \n",
     "\n",
     "    #They use ppegt below. I believe it should be ppent.\n",
     "    out['k_phy'] = out['ppent'] #+ pdm.rdiff(out['dp']) #we reconstruct gross ppe because ppegt has a lot of missing values\n",
