added hoberg, phillips, 2010 TNIC data

--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -797,7 +797,7 @@
     "    # cash flow vars\n",
     "    out['cflow_is'] = df['ib']+df['dp']\n",
     "    out['cflow_cfs'] = df['oancf'] \n",
-    "    out['cflow_full'] = np.where(df.dtdate.dt.year<1987, out['cflow_is'], out['cflow_cfs'])\n",
+    "    out['cflow_full'] = np.where(df.dtdate.dt.year<=1987, out['cflow_is'], out['cflow_cfs'])\n",
     "    for v in ['cflow_is','cflow_cfs','cflow_full']:\n",
     "        out[f'{v}_2la'] = out[v] / out['lag_at']\n",
     "\n",
