--- a/nbs/01_wrds/04_compq_ccm.ipynb
+++ b/nbs/01_wrds/04_compq_ccm.ipynb
@@ -939,7 +939,7 @@
     "    # cash flow vars\n",
     "    out['cflow_is'] = (df['ibq']+df['dpq']) \n",
     "    out['cflow_cfs'] = out['oancfy_q'] \n",
-    "    out['cflow_full'] = np.where(df.dtdate.dt.year<1987, out['cflow_is'], out['cflow_cfs'])\n",
+    "    out['cflow_full'] = np.where(df.dtdate.dt.year<=1987, out['cflow_is'], out['cflow_cfs'])\n",
     "    for v in ['cflow_is','cflow_cfs','cflow_full']:\n",
     "        out[f'{v}_2la'] = out[v] / out['lag_atq']\n",
     "\n",
