--- a/nbs/02_papers/greenwood_hanson_2013.ipynb
+++ b/nbs/02_papers/greenwood_hanson_2013.ipynb
@@ -107,7 +107,8 @@
     "\n",
     "    df['DD'] = (np.log(df.V / df.F) + df.lbhret12 - 0.5*(df.sigmaV**2)) / df.sigmaV\n",
     "    df['DD'] = pdm.wins(df['DD'])\n",
-    "    df['EDF'] = norm.cdf(-df.DD) #expected default probability\n",
+    "    df = df.dropna(subset=['DD'])\n",
+    "    df['EDF'] = norm.cdf(-df.DD.astype('float64')) #expected default probability\n",
     "\n",
     "    return df"
    ]
