added hoberg, phillips, 2010 TNIC data

--- a/nbs/02_papers/hoberg_phillips_2020.ipynb
+++ b/nbs/02_papers/hoberg_phillips_2020.ipynb
@@ -81,6 +81,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
+    "#| hide\n",
     "DATA_REPO = Path(os.getenv('DATA_REPO')) #path to folder with all needed datasets (the four below)\n",
     "\n",
     "SAVE_PATH_RAW = DATA_REPO/'finsets/papers/hoberg_phillips_2010/raw.parquet'\n",
@@ -120,7 +121,17 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "raw = get_raw_data()\n",
+    "raw = get_raw_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| echo: false\n",
+    "#| hide\n",
     "if SAVE_PATH_RAW:\n",
     "    os.makedirs(SAVE_PATH_RAW.parent, exist_ok=True)\n",
     "    raw.to_parquet(SAVE_PATH_RAW)"
@@ -324,6 +335,18 @@
    "source": [
     "#| eval: false\n",
     "clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "if SAVE_PATH_PROCESSED:\n",
+    "    os.makedirs(SAVE_PATH_PROCESSED.parent, exist_ok=True)\n",
+    "    clean.to_pickle(SAVE_PATH_PROCESSED)"
    ]
   },
   {
