small indent fix

--- a/nbs/02_papers/hoberg_phillips_2020.ipynb
+++ b/nbs/02_papers/hoberg_phillips_2020.ipynb
@@ -102,12 +102,11 @@
     "\n",
     "    response = requests.get(url)\n",
     "    if response.status_code == 200:\n",
-    "        # Decompress the file first with zip and then with gzip\n",
+    "        # Decompress the file first with zip\n",
     "        with io.BytesIO(response.content) as compressed_file:\n",
     "            with zipfile.ZipFile(compressed_file, 'r') as zip_ref:\n",
     "                with zip_ref.open(txt_file) as data_file:\n",
-    "                    #with open(data_file, 'rb') as final_gzip_file:\n",
-    "                        df = pd.read_csv(io.BytesIO(data_file.read()),delimiter='\\t' ,header=0)\n",
+    "                    df = pd.read_csv(io.BytesIO(data_file.read()),delimiter='\\t' ,header=0)\n",
     "    else:\n",
     "        print(\"Failed to download the file. Status code:\", response.status_code)\n",
     "    \n",
