--- a/nbs/01_wrds/00_wrds_api.ipynb
+++ b/nbs/01_wrds/00_wrds_api.ipynb
@@ -285,7 +285,7 @@
     "          have the same hostname, port, and database name.\n",
     "\n",
     "        On Windows, this file is actually called \"pgpass.conf\"\n",
-    "          and is stored in the %APPDATA%\\postgresql directory.\n",
+    "          and is stored in the %APPDATA%\\\\postgresql directory.\n",
     "        This must be handled differently.\n",
     "\n",
     "        Usage:\n",
@@ -305,7 +305,7 @@
     "\n",
     "        Windows is different enough from everything else\n",
     "          as to require its own special way of doing things.\n",
-    "        Save the pgpass file in %APPDATA%\\postgresql as 'pgpass.conf'.\n",
+    "        Save the pgpass file in %APPDATA%\\\\postgresql as 'pgpass.conf'.\n",
     "        \"\"\"\n",
     "        appdata = os.getenv(\"APPDATA\")\n",
     "        pgdir = appdata + os.path.sep + \"postgresql\"\n",
@@ -349,7 +349,7 @@
     "        \"\"\"\n",
     "        pgpass = \"{host}:{port}:{dbname}:{user}:{passwd}\\n\"\n",
     "        passwd = self._password\n",
-    "        passwd = passwd.replace(\":\", \"\\:\")\n",
+    "        passwd = passwd.replace(\":\", r\"\\:\")\n",
     "        # Avoid clobbering the file if it exists\n",
     "        if os.path.isfile(pgfile):\n",
     "            with open(pgfile, \"r\") as fd:\n",
@@ -360,7 +360,7 @@
     "                #  split() from splitting on them.\n",
     "                # Saving to a new variable here absolves us\n",
     "                #  of having to re-replace the substituted ##COLON## later.\n",
-    "                oldline = line.replace(\"\"\"\\:\"\"\", \"##COLON##\")\n",
+    "                oldline = line.replace(r\"\"\"\\:\"\"\", \"##COLON##\")\n",
     "                fields = oldline.split(\":\")\n",
     "                # On finding a line matching the hostname, port and dbname\n",
     "                #  we replace it with the new pgpass line.\n",
